--- a/package.json
+++ b/package.json
@@ -26,19 +26,21 @@
     "qss": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-github-calendar": "^4.5.9",
     "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
     "rimraf": "^6.0.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-textshadow": "^2.1.3",
-    "@types/bun": "latest"
+    "tailwindcss-textshadow": "^2.1.3"
   },
   "peerDependencies": {
     "typescript": "^5"
