Page Title Change

--- a/CONFIG.json
+++ b/CONFIG.json
@@ -1,6 +1,6 @@
 {
    "siteMetadata":{
-      "title":"Portfolio",
+      "title":"Pratik's Portfolio",
       "description":"Hi, my name is Pratik! This is my personal page where you can find out more about who I am, what I do, and the projects I'm working on.",
       "embeds":{
          "color":"#ce6419",
