--- a/CONFIG.json
+++ b/CONFIG.json
@@ -499,7 +499,7 @@
          "description":"A fully functional Lenskart clone with a modern UI, built with Next.js, Tailwind CSS, and Prisma.",
          "imageSRC":"/images/projects/lenskart.webp",
          "buttonText":"View on Github",
-         "buttonURL":"https://github.com/pratxk/Lenskart-Clone/",
+         "buttonURL":"https://extraordinary-paprenjak-f2792f.netlify.app/",
          "badges":[
 
          ]
